max width content

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -17,33 +17,35 @@
   </head>
   <body>
     <header-app></header-app>
+    <section>
+      <hero-section></hero-section>
+    </section>
     <main>
       <section>
-        <hero-section></hero-section>
-      </section>
-      <section>
         <div class="smetaone-section">
-          <div class="smetaone-info">
-            <div class="smetaone-image">
-              <img src="logos/logo-smetaone.jpeg" alt="smetaone logo" width="200px" />
+          <div class="container">
+            <div class="smetaone-info">
+              <div class="smetaone-image">
+                <img src="logos/logo-smetaone.jpeg" alt="smetaone logo" width="200px" />
+              </div>
+              <div class="smetaone-desc">
+                <h3>Apa itu Smetaone?</h3>
+                <p>
+                  Smetaone adalah sebuah Organisasi
+                  <span style="color: #ec3f35">"Palang Merah Remaja" </span>di
+                  Sekolah SMK Negeri 1 Bandar Lampung. Smetaone hadir untuk
+                  memberikan edukasi, pelatihan, dan keterampilan dalam bidang
+                  kesehatan serta kemanusiaan. Sebagai bagian dari
+                  ekstrakurikuler. Melalui semangat kepedulian dan kerja sama,
+                  Smetaone bertujuan untuk membentuk generasi muda yang tanggap,
+                  peduli, dan siap membantu sesama dalam keadaan darurat maupun
+                  situasi kemanusiaan lainnya.
+                </p>
+              </div>
             </div>
-            <div class="smetaone-desc">
-              <h3>Apa itu Smetaone?</h3>
-              <p>
-                Smetaone adalah sebuah Organisasi
-                <span style="color: #ec3f35">"Palang Merah Remaja" </span>di
-                Sekolah SMK Negeri 1 Bandar Lampung. Smetaone hadir untuk
-                memberikan edukasi, pelatihan, dan keterampilan dalam bidang
-                kesehatan serta kemanusiaan. Sebagai bagian dari
-                ekstrakurikuler. Melalui semangat kepedulian dan kerja sama,
-                Smetaone bertujuan untuk membentuk generasi muda yang tanggap,
-                peduli, dan siap membantu sesama dalam keadaan darurat maupun
-                situasi kemanusiaan lainnya.
-              </p>
+            <div class="smetaone-char">
+              <img src="char/robin2.png" width="250px" alt="" />
             </div>
-          </div>
-          <div class="smetaone-char">
-            <img src="char/robin2.png" width="250px" alt="" />
           </div>
         </div>
       </section>
@@ -52,42 +54,44 @@
           <div class="title-goals">
             <h2>Visi & Misi</h2>
           </div>
-          <div class="vision-mission">
-            <div class="goals-char">
-              <img src="char/luffy.png" alt="">
-            </div>
-            <div class="desc">
-              <div class="vision">
-                <h3>Visi</h3>
-                <p>
-                  Menjadikan eskstrakulikuler PMR sebagai tampat generasi muda
-                  Palang Merah untuk mengembangkan karakter, jiwa sosial, dan
-                  jiwa kemanusiaan serta berakhlak mulia dengan memegang teguh
-                  prinsip-prinsip dasar Palang Merah dan bulan sabit merah
-                  Internasiaonal serta Tri Bakti Palang Merah.
-                </p>
+          <div class="container">
+            <div class="vision-mission">
+              <div class="goals-char">
+                <img src="char/luffy.png" alt="">
               </div>
-              <div class="mission">
-                <h3>Misi</h3>
-                <ul style="padding: 0 1.5rem;" type="-">
-                  <li>Menguatkan dan mengembangkan organisasi</li>
-                  <li>Meningkatkan dan mengembangkan kualitas SDM</li>
-                  <li>
-                    Menanamkan rasa kesukarelaan dan jiwa sosial kemanusiaan
-                  </li>
-                  <li>
-                    Mengembangkan kegiatan Kepalang Merahan yang bermasyarakat
-                  </li>
-                  <li>Meningkatkan dan mengembangkan jejaring kerjasama</li>
-                  <li>
-                    Melaksanakan pengamalan Prinsip-Prinsip Dasar Gerakan Palang
-                    Merah Remaja dan Bulan Sabit Merah Internasional
-                  </li>
-                  <li>
-                    Mengembangkan komunikasi, informasi dan edukasi Kepalang
-                    Merahan
-                  </li>
-                </ul>
+              <div class="desc">
+                <div class="vision">
+                  <h3>Visi</h3>
+                  <p>
+                    Menjadikan eskstrakulikuler PMR sebagai tampat generasi muda
+                    Palang Merah untuk mengembangkan karakter, jiwa sosial, dan
+                    jiwa kemanusiaan serta berakhlak mulia dengan memegang teguh
+                    prinsip-prinsip dasar Palang Merah dan bulan sabit merah
+                    Internasiaonal serta Tri Bakti Palang Merah.
+                  </p>
+                </div>
+                <div class="mission">
+                  <h3>Misi</h3>
+                  <ul style="padding: 0 1.5rem;" type="-">
+                    <li>Menguatkan dan mengembangkan organisasi</li>
+                    <li>Meningkatkan dan mengembangkan kualitas SDM</li>
+                    <li>
+                      Menanamkan rasa kesukarelaan dan jiwa sosial kemanusiaan
+                    </li>
+                    <li>
+                      Mengembangkan kegiatan Kepalang Merahan yang bermasyarakat
+                    </li>
+                    <li>Meningkatkan dan mengembangkan jejaring kerjasama</li>
+                    <li>
+                      Melaksanakan pengamalan Prinsip-Prinsip Dasar Gerakan Palang
+                      Merah Remaja dan Bulan Sabit Merah Internasional
+                    </li>
+                    <li>
+                      Mengembangkan komunikasi, informasi dan edukasi Kepalang
+                      Merahan
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
